--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "clean": "rm -rf .next && rm -rf node_modules/.cache",
+    "typecheck": "tsc --noEmit",
     "dev:clean": "bun run clean && bun run dev"
   },
   "dependencies": {
@@ -19,25 +20,25 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "geist": "^1.4.2",
+    "geist": "^1.5.1",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
-    "next-intl": "^4.3.5",
+    "next-intl": "^4.3.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.1.12",
-    "@types/node": "^24.3.0",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@types/node": "^24.3.1",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
-    "eslint": "^9.34.0",
+    "eslint": "^9.35.0",
     "eslint-config-next": "15.5.2",
     "prettier": "^3.6.2",
-    "tailwindcss": "^4.1.12",
-    "tw-animate-css": "^1.3.7",
+    "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2"
   }
 }
